# project_spring_2026

./: .gitignore  README.md  hardware.py  pyproject.toml  requirements.txt
app/: hardware.py  interface.py  main.py  regulation.py  timelapse.py
docs/fiat_lux_camera_code/: interface.py  requirements.txt
fiat_lux_camera_code/: README.md  interface.py
src/: hardware.py  interface.py  main.py  regulation.py  timelapse.py
